# moodmix

./: .gitignore  CLAUDE.md  Makefile  README.md  backup-db.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  restore-from-remote.sh
backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_chapters_to_mixes.py  003_rename_valence_to_mood.py  004_update_genres.py  005_add_skipped_videos_and_validated.py  006_add_title_to_skipped_videos.py  007_add_users_and_auth_tables.py  008_add_user_playback_state.py  009_add_artists_table.py  010_add_tracks_table.py  011_add_audio_classification_columns.py  012_add_youtube_video_id_to_tracks.py  013_add_streaming_resolved_at.py  534ed531b629_add_skip_category_filter_to_seed_.py
backend/app/: admin.py  config.py  database.py  exception_handlers.py  exceptions.py  main.py
backend/data/: seed_channels.json
backend/scripts/: _artist_name.py  _track_title.py  apply_deezer_artist_candidates.py  backfill_chapter_tracks.py  backfill_chapters.py  crawl_all_channels.py  export_pending.py  fetch_chapters_from_comments.py  fetch_tracks_for_recovered_artists.py  find_deezer_artists_via_album_genres.py  import_classified.py  import_seed_channels.py  rederive_mood_vectors.py  resolve_channel_ids.py  resolve_deezer_artists_and_tracks.py  resolve_streaming.py
backend/tests/: admin.http  ai-search.http  api.http  auth.http  conftest.py  genres.http
docs/: PLAN.md  (+11 more)
(+222 files in other folders)
