[project]
name = "moodmix-api"
version = "0.1.0"
description = "Background music discovery API — mood-based search via pgvector"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "slowapi>=0.1.9",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
